# frogcom

./: .gitignore  API_EXAMPLES.md  DEVELOPER_GUIDE.md  MIDDLEWARE_GUIDE.md  ORCHESTRATION_GUIDE.md  README.md  pyproject.toml  tmp.cpp  tmp.py  tmp.txt
.save_logs/: server.py
dev/: logs_parser.py  printer.py
docs/: generate-api.md
src/frogcom/: __init__.py  main.py
src/frogcom/api/: __init__.py  middleware.py
src/frogcom/api/dto/: models.py
src/frogcom/api/middleware/: __init__.py  middleware.py
src/frogcom/api/routes/: base.py  generate_routes.py  health_routes.py  llm_config_routes.py  orchestration_routes.py
src/frogcom/config/: config.py
src/frogcom/internal/app/: app.py
src/frogcom/internal/contexts/: llm_orchestrator.py
src/frogcom/internal/services/: __init__.py  llm_service.py  logging_service.py  orchestrator_service.py  prompt_service.py  response_verifier.py  tracing_service.py
tests/: test_verifier.py
