[tool.poetry]
name = "frogcom"
version = "0.1.0"
description = "vLLM project adapted for MERA Code"
authors = ["You <you@example.com>"]
packages = [{ include = "frogcom" }]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N"]
ignore = ["E501"]  # игнорировать длину строк, если используешь 88+

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[tool.wemake-python-styleguide]
max-line-length = 88

[project]
name = "frogcom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.2",
    "mypy>=1.18.2",
    "pydantic[mypy]>=2.12.0",
    "ruff>=0.14.0",
    "torch>=2.8.0",
    "torch-c-dlpack-ext>=0.1.4",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.37.0",
    "vllm>=0.11.0",
    "wemake-python-styleguide>=1.4.0",
]
